# acpi-wakeup-persistd

./: Makefile  README.md  pyproject.toml
configs/: default.conf
src/: config_parser.py  main.py
systemd/: acpi-wakeup-persistd.path  acpi-wakeup-persistd.service  acpi-wakeup-persistd.timer
tests/: test_config.py
