[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpi-wakeup-persistd"
version = "1.1.0"
description = "A systemd service that persists ACPI wakeup sources across reboots"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
acpi-wakeup-persistd = "main:main"
